--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,14 +1,14 @@
 <div >
-  <div >
+  <form  >
     <h5 >Login</h5>
     <div >
       <label for="email">Email</label>
-      <input type="text" id="email" placeholder="Email Address" [(ngModel)]="email">
+      <input type="text" id="email" name="email" placeholder="Email Address" [(ngModel)]="email">
     </div>
     <div>
       <label for="email">Password</label>
-      <input type="password" id="password" placeholder="Password" [(ngModel)]="password">
+      <input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="password">
     </div>
     <button type="submit"  (click)="tryLogin()">Login</button>
-  </div>
+  </form>
 </div>
