Get in deployment order

--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -3,4 +3,4 @@
   Have a chat while waiting for a game.
 </p>
 
-<button (click)="this.customer.logOut()">Log Out!</button>
+<button (click)="this.customer.logOut('')">Log Out!</button>
