Mocking up chatbox 1

--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -3,4 +3,6 @@
   Have a chat while waiting for a game.
 </p>
 
+<app-chatbox></app-chatbox>
+
 <button (click)="this.customer.logOut('')">Log Out!</button>
