--- a/src/app/chatbox/chatbox.component.css
+++ b/src/app/chatbox/chatbox.component.css
@@ -1,1 +1,10 @@
-.chatbox { border: solid 1px black; margin-left: 10px ; margin-bottom: 25px; padding: 3px ; overflow-y:auto ; height: 300px }
+.chatbox { border: solid 1px black; margin-left: 10px ; margin-bottom: 25px; padding: 3px ; overflow-y:auto ; height: 300px ; background:silver; width: 300px; }
+
+.chatline {  background:#eeeeee; margin:4px; border-radius:5px }
+.chatline .user {  background:blue; color:white; border-radius:5px 0px 0px 5px; padding-bottom: 1px}
+.chatline .user.red {  background:red ; color:white}
+.chatline .user.blue {  background:blue ; color:white}
+.chatline .user.green {  background:green; color:white}
+.chatline .user.white {  background:white ; color:black}
+
+:host {float:left}
