--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -1,5 +1,5 @@
 <div class='chatbox' #chatboxScroll [scrollTop]="chatboxScroll.scrollHeight">
-  <div *ngFor="let c of chats">
-	  <span class='user'>{{c.user}}:</span>  {{c.message}}
+  <div *ngFor="let c of chats" class='chatline'>
+	  <span class='user {{this.getUserColor(c.user)}}'>{{c.user}}:</span>  {{c.message}}
   </div>
 </div>
