--- a/src/app/lobby/lobby.component.css
+++ b/src/app/lobby/lobby.component.css
@@ -1,1 +1,11 @@
+.floatbox { float:left}
+.userbox { border: solid 1px black; margin-left: 10px ; margin-bottom: 25px; padding: 3px ; overflow-y:auto ; height: 300px ; background:silver; width: 100px;}
 
+.floatbreak { clear:both}
+.chatInput { clear:left}
+
+.userbox .user {  border-radius:5px 5px 5px 5px; padding: 0px 0px 1px 4px; margin:4px}
+.userbox .user.red {  background:red ; color:white}
+.userbox .user.blue {  background:blue ; color:white}
+.userbox .user.green {  background:green ; color:white}
+.userbox .user.white {  background:white ; color:black}
