--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -6,11 +6,12 @@
 <app-chatbox></app-chatbox>
 <div class="floatbox">
   <div class='userbox' #userScroll [scrollTop]="userScroll.scrollHeight">
-    <div *ngFor="let u of users" class='user {{u.color}}'>
+     <div *ngFor="let u of nonSystemUsers()" class='user {{u.color}}' (click)="onSelect(u)">
   	  {{u.userName}}
     </div>
   </div>
 </div>
+<app-user-detail [user]="selectedUser"></app-user-detail>
 <div class='floatbreak'></div>
 <input type='text' class='chatInput'>
 
