--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -13,6 +13,6 @@
 </div>
 <app-user-detail [user]="selectedUser"></app-user-detail>
 <div class='floatbreak'></div>
-<input type='text' class='chatInput'>
+<input type='text' class='chatInput' [(ngModel)]="newChat" (keyup.enter)="sendChat()">
 
 <button (click)="this.loginService.logOut('')">Log Out!</button>
