--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -13,6 +13,8 @@
 </div>
 <app-user-detail [user]="selectedUser"></app-user-detail>
 <div class='floatbreak'></div>
-<input type='text' class='chatInput' [(ngModel)]="newChat" (keyup.enter)="sendChat()">
+<input type='text' class='chatInput' [(ngModel)]="newChat" (keyup.enter)="sendChat()"><button (click)="sendChat()">Send</button>
 
+<div>
 <button (click)="this.loginService.logOut('')">Log Out!</button>
+</div>
