Add find game widget and game matching functionality.    /user/queue/game channel receives user specific data

--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -18,3 +18,7 @@
 <div>
 <button (click)="this.loginService.logOut('')">Log Out!</button>
 </div>
+
+<div>
+  <app-find-game-widget></app-find-game-widget>
+</div>
