--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,11 +2,11 @@
   <form  >
     <h5 >Login</h5>
     <div >
-      <label for="email">Email</label>
-      <input type="text" id="email" name="email" placeholder="Email Address" [(ngModel)]="email">
+      <label for="userName">User Name</label>
+      <input type="text" id="userName" name="userNAme" placeholder="User Name" [(ngModel)]="userName">
     </div>
     <div>
-      <label for="email">Password</label>
+      <label for="password">Password</label>
       <input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="password">
     </div>
     <button type="submit"  (click)="tryLogin()">Login</button>
