Allow login as guest

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,5 +10,7 @@
       <input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="password">
     </div>
     <button type="submit"  (click)="tryLogin()">Login</button>
+    
+    <button  (click)="tryLoginGuest()">Login as Guest</button>
   </form>
 </div>
