Add gameroom and menubar. Clicking game items highlights them and prepares to send game message

--- a/src/app/lobby/lobby.component.css
+++ b/src/app/lobby/lobby.component.css
@@ -9,3 +9,5 @@
 .userbox .user.blue {  background:blue ; color:white}
 .userbox .user.green {  background:green ; color:white}
 .userbox .user.white {  background:white ; color:black}
+
+.lobby { background-color:gray; width:680px; height:550px; border:1px black solid; float:left}
