--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -1,3 +1,4 @@
+<div class="lobby">
 <hello name="{{ this.loginService.getName() }}"></hello>
 <p>
   Have a chat while waiting for a game.
@@ -21,4 +22,6 @@
 
 <div>
   <app-find-game-widget></app-find-game-widget>
+</div>
+
 </div>
