--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,7 @@
-<div >
+<div class='login'>
+  <app-msg></app-msg>
   <form  >
-    <h5 >Login</h5>
+    <h2 >Login</h2>
     <div >
       <label for="userName">User Name</label>
       <input type="text" id="userName" name="userNAme" placeholder="User Name" [(ngModel)]="userName">
@@ -9,8 +10,11 @@
       <label for="password">Password</label>
       <input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="password">
     </div>
-    <button type="submit"  (click)="tryLogin()">Login</button>
-    
-    <button  (click)="tryLoginGuest()">Login as Guest</button>
+    <div class="buttonPanel">
+      <button type="submit"  (click)="tryLogin()">Login</button>
+      
+      <button  (click)="register()">Register</button>
+      <button  (click)="tryLoginGuest()">Login as Guest</button>
+    </div>
   </form>
 </div>
