--- a/src/app/chatbox/chatbox.component.css
+++ b/src/app/chatbox/chatbox.component.css
@@ -1,13 +1,6 @@
 .chatbox { border: solid 1px black; margin-left: 10px ; margin-bottom: 25px; padding: 3px ; overflow-y:auto ; height: 300px ; background:silver; width: 300px; }
 
 .chatline {  background:#eeeeee; margin:4px; border-radius:5px }
-.chatline .user {  background:white; color:black; border-radius:5px 0px 0px 5px; padding-bottom: 1px}
-.chatline .user.red {  background:red ; color:white}
-.chatline .user.blue {  background:blue ; color:white}
-.chatline .user.green {  background:green ; color:white}
-.chatline .user.orange {  background:orange ; color:black}
-.chatline .user.yellow {  background:yellow ; color:black}
-.chatline .user.white {  background:white ; color:black}
-.chatline .user.black {  background:black ; color:white}
+.chatline .user {  border-radius:5px 0px 0px 5px; padding-bottom: 1px}
 
 :host {float:left}
