--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* Add application styles & imports to this file! */
 
 
-.mainBox { background-color:gray; width:680px; height:550px; border:1px black solid; float:left}
+.mainBox { background-color:gray; width:680px; height:750px; border:1px black solid; float:left}
 
 .red {  background:red ; color:white}
 .blue {  background:blue ; color:white}
@@ -10,3 +10,5 @@
 .yellow {  background:yellow ; color:black}
 .white {  background:white ; color:black}
 .black {  background:black ; color:white}
+
+div.break {clear:both}
