Deal with game endings, and listen to user records

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -17,5 +17,8 @@
       <div class="round"> {{roundText}} </div>
       <div class="scores"> {{scoreText}} </div>
     </div>
+    <div>
+      <button (click)="close()">{{cancelButtonName}}</button>
+    </div>
 
 </div>
