--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,9 +1,7 @@
 <div *ngIf="user" class="floatbox">
   <div class="userDetails">
 	<h2>{{user.userName | uppercase}} Details</h2>
-	<div>Logged in : </div>
-	<div>Record w:1 l:2</div>
-	<div>Detail -  {{user.color}} </div>
+  <div>Record W:{{user.wins}} L:{{user.losses}}</div>
 	<button>Invite to game</button>
   </div>
 </div>
