Better arrange widgets in lobby

--- a/src/app/find-game-widget/find-game-widget.component.css
+++ b/src/app/find-game-widget/find-game-widget.component.css
@@ -1,4 +1,4 @@
-.findGameWidget {margin:10px; }
+.findGameWidget {float:right ; margin-right: 142px}
 
 
 .gameName {font-size: larger; margin:12px}
