--- a/src/app/lobby/lobby.component.css
+++ b/src/app/lobby/lobby.component.css
@@ -2,7 +2,8 @@
 .userbox { border: solid 1px black; margin-left: 10px ; margin-bottom: 25px; padding: 3px ; overflow-y:auto ; height: 300px ; background:silver; width: 100px;}
 
 .floatbreak { clear:both}
-.chatInput { margin-right: 15px; margin-bottom:15px}
+.chatInput { margin: 0px 15px 15px 10px }
 
 .userbox .user {  border-radius:5px 5px 5px 5px; padding: 0px 0px 1px 4px; margin:4px}
 
+.logoutButton { margin-left:10px}
