--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,7 @@
       <input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="password">
     </div>
     <div class="buttonPanel">
-      <button type="submit"  (click)="tryLogin()">Login</button>
+      <button type="submit" class="defButton" (click)="tryLogin()">Login</button>
       
       <button  (click)="register()">Register</button>
       <button  (click)="tryLoginGuest()">Login as Guest</button>
