--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -21,7 +21,7 @@
       </select>
     </div>
     <div class="buttonPanel">
-      <button type="submit"  (click)="tryRegister()">Register</button>
+      <button type="submit" class="defButton" (click)="tryRegister()">Register</button>
       <button  (click)="cancel()">Cancel</button>
     </div>
   </form>
