--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,8 @@
 /* Add application styles & imports to this file! */
 
+body {background-color:#dddddd}
 
-.mainBox { background-color:gray; width:680px; height:750px; border:1px black solid; float:left}
+.mainBox { background-image:linear-gradient(to right, #dddddd, #5555dd); width:680px; height:750px; border-width:1px 1px 1px 0px; border-color:black; border-style:solid; float:left; border-radius: 0px 20px 20px 0px}
 
 .red {  background:red ; color:white}
 .blue {  background:blue ; color:white}
