--- a/src/app/menubar/menubar.component.css
+++ b/src/app/menubar/menubar.component.css
@@ -1,7 +1,9 @@
-.menuButtonBorder{border-width: 1px 1px 1px 0px; border-style:solid; border-color:black; margin:6px 6px 4px 0px; background-color:#555555; width: auto;  padding: 6px 4px 6px 8px; }
+.menuButtonBorder{border-width: 1px 1px 1px 0px; border-style:solid; border-color:black; margin:6px 6px 4px 0px; background-color:#333399; width: auto;  padding: 6px 4px 6px 8px; border-radius: 0 20px 20px 0}
 
-.menuButtonBorder.active{border-width: 1px 1px 1px 0px; border-style:solid; border-color:black; margin:6px 6px 4px -2px; background-color:gray; width: auto;  padding: 6px 4px 6px 8px;}
+.menuButtonBorder.active{border-width: 1px 1px 1px 0px; border-style:solid; border-color:black; margin:6px 6px 4px -2px; background-color:#5555dd; width: auto;  padding: 6px 4px 6px 8px;}
 
-.menuButton{border-width: 3px 3px 3px 3px; border-style:outset; border-color:#888888; margin:2px 2px 2px 2px; background-color:silver; width: auto;  padding: 6px 4px 6px 8px; }
+.menuButton{border-width: 3px 3px 3px 3px; border-style:outset; border-color:#444444; margin:2px 2px 2px 2px; background-color:silver; width: auto;  padding: 6px 4px 6px 8px; border-radius:0 20px 20px 0}
+
+.menubar{padding-top:10px}
 
 :host { float:left;}
