--- a/src/app/find-game-widget/find-game-widget.component.html
+++ b/src/app/find-game-widget/find-game-widget.component.html
@@ -2,11 +2,15 @@
   <div *ngIf="isSeeking">
     Waiting for a match... <button (click)="endSeek()">Cancel</button>
   </div>
-  <div *ngIf="!isSeeking && !inGame">
+  <div *ngIf="!isSeeking && !game.gameStatus.inGame && !game.gameStatus.invited">
     <button (click)="startSeek()">Find a game</button>
   </div>
-  <div *ngIf="inGame">
-    <div>Ready to start game<span class="gameName">{{gameDesc}}</span></div>
+  <div *ngIf="game.gameStatus.invited">
+    <div><span class="inviter">{{game.gameStatus.inviter}}</span> has invited you to a game</div>
+    <button (click)="acceptInvite()">Accept Invite</button>
+  </div>
+  <div *ngIf="game.gameStatus.inGame">
+    <div>Ready to start game<span class="gameName">{{game.gameStatus.gameName}}</span></div>
     <button (click)="cancelGame()">Cancel Game</button>
   </div>
 </div>
