--- a/src/app/lobby/lobby.component.html
+++ b/src/app/lobby/lobby.component.html
@@ -1,5 +1,5 @@
 <div class="lobby mainbox">
-<hello name="{{ this.loginService.getName() }}"></hello>
+<app-hello name="{{ this.loginService.getName() }}"></app-hello>
 <p>
   Have a chat while waiting for a game.
 </p>
