--- a/src/app/msg/msg.component.html
+++ b/src/app/msg/msg.component.html
@@ -1,4 +1,4 @@
 <div class="messagePane">
-<p class="globalMessage">{{ msgService_.getMessage()}}</p>
-<p class="globalError">{{ msgService_.getError()}}</p>
+<p class="globalMessage">{{ msgService.getMessage()}}</p>
+<p class="globalError">{{ msgService.getError()}}</p>
 </div>
