--- a/src/app/find-game-widget/find-game-widget.component.html
+++ b/src/app/find-game-widget/find-game-widget.component.html
@@ -6,7 +6,7 @@
     <button (click)="startSeek()">Find a game</button>
   </div>
   <div *ngIf="game.gameStatus.invited">
-    <div><span class="inviter">{{game.gameStatus.inviter}}</span> has invited you to a game</div>
+    <div><span class="inviter {{userData.getUser(game.gameStatus.inviter).color}}">{{game.gameStatus.inviter}}</span> has invited you to a game</div>
     <button (click)="acceptInvite()">Accept Invite</button>
   </div>
   <div *ngIf="game.gameStatus.inGame">
