Suggest AI game if match is taking too long

--- a/src/app/find-game-widget/find-game-widget.component.css
+++ b/src/app/find-game-widget/find-game-widget.component.css
@@ -1,4 +1,6 @@
 .findGameWidget {float:right ; margin-right: 142px}
 
+.seekingLongTime {width:260px}
+
 
 .gameName {font-size: larger; margin:12px}
