Play with fonts

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* Add application styles & imports to this file! */
 
-body {background-color:#dddddd}
+body {background-color:#dddddd; font-family:'Georgia'}
 
 .mainBox { background-image:linear-gradient(to right, #dddddd, #5555dd); width:680px; height:750px; border-width:1px 1px 1px 0px; border-color:black; border-style:solid; float:left; border-radius: 0px 20px 20px 0px}
 
