Finish game.component test

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -18,7 +18,7 @@
       <div class="scores"> {{game.gameStatus.scoreText}} </div>
     </div>
     <div>
-      <button (click)="close()">{{cancelButtonName}}</button>
+      <button (click)="close()" id="closeGame">{{cancelButtonName}}</button>
     </div>
 
 </div>
