Finish register component tests

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -21,8 +21,8 @@
       </select>
     </div>
     <div class="buttonPanel">
-      <button type="submit" class="defButton" (click)="tryRegister()">Register</button>
-      <button  (click)="cancel()">Cancel</button>
+      <button id="registerBtn" type="submit" class="defButton" (click)="tryRegister()">Register</button>
+      <button id="cancelBtn"  (click)="cancel()">Cancel</button>
     </div>
   </form>
 </div>
