--- a/src/app/chatbox/chatbox.component.html
+++ b/src/app/chatbox/chatbox.component.html
@@ -1,5 +1,7 @@
 <div class='chatbox' #chatboxScroll >
-  <div *ngFor="let c of chats()" class='chatline'>
+@for (c of chats(); track c.msgID) { 
+  <div class='chatline'>
 	  <span class='user {{this.getUserColor(c.userName)}}'>{{c.userName}}:</span>  {{c.chatText}}
   </div>
+}
 </div>
