--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,11 +4,11 @@
     <h2 >Login</h2>
     <div >
       <label for="userName">User Name</label>
-      <input type="text" id="userName" name="userNAme" placeholder="User Name" [(ngModel)]="userName">
+      <input type="text" id="userName" name="userName" placeholder="User Name" [(ngModel)]="userName" #ctrl="ngModel">
     </div>
     <div>
       <label for="password">Password</label>
-      <input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="password">
+      <input type="password" id="password" name="password" placeholder="Password" [(ngModel)]="password" #ctrl="ngModel">
     </div>
     <div class="buttonPanel">
       <button type="submit" class="defButton" (click)="tryLogin()">Login</button>
