--- a/src/app/menubar/menubar.component.html
+++ b/src/app/menubar/menubar.component.html
@@ -1,4 +1,6 @@
-<div class='menubar' *ngIf="game.getGameStatus()=='started' || game.getGameStatus()=='finished'">
+<div class='menubar' >
+@if (game.getGameStatus()=='started' || game.getGameStatus()=='finished') {
   <div [ngClass]="{menuButtonBorder: true, active: inLobby()}" (click)="toLobby()"><div class="menuButton">Game Lobby</div></div>
   <div [ngClass]="{menuButtonBorder: true, active: !inLobby()}" (click)="toGame()"><div class="menuButton">{{game.gameStatus.gameName}}</div></div>
+}
 </div>
